# arq-dashboard

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md
.github/workflows/: docker-publish.yml  test.yml
backend/: README.md  pyproject.toml
backend/arq_dashboard/: __init__.py  cache.py  cli.py  dependencies.py  main.py  queue.py  utils.py
backend/arq_dashboard/api/: api.py
backend/arq_dashboard/api/endpoints/: function_stats.py  functions.py  jobs.py  queues.py  stats.py
backend/arq_dashboard/core/: settings.py
backend/arq_dashboard/schemas/: __init__.py  api_model.py  function_stats.py  job.py  mixins.py
backend/arq_dashboard/tui/: app.py  data.py
backend/tests/: conftest.py  settings.py  test_queue.py
backend/tests/api/: test_functions.py  test_jobs.py  test_queues.py  test_stats.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  api.ts  main.ts  store.ts  types.ts  utils.ts
frontend/src/components/: CachedAt.vue  ErrorMessage.vue  Loading.vue  Navbar.vue  Pagination.vue  ReadableDatetime.vue
frontend/src/components/charts/: RuntimeChart.vue  (+1 more)
frontend/src/composables/: useAsyncTask.ts  useAutoRefresh.ts  useLiveClock.ts  useTheme.ts
frontend/src/router/: index.ts
frontend/src/styles/: animations.css  base.css  components.css  index.css  utilities.css  variables.css
frontend/src/views/: JobView.vue  JobsView.vue  SettingView.vue  StatsView.vue
frontend/tests/: utils.spec.ts
scripts/: mock_server.py  screenshots.mjs
(+15 files in other folders)
