[project]
name = "arq-dashboard"
version = "0.2.0"
description = "A dashboard for ARQ built with FastAPI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "aiometer>=0.5.0",
    "arq>=0.25",
    "fastapi[standard]>=0.115",
    "loguru>=0.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyhumps>=3.8",
    "textual>=3.0",
]

[project.scripts]
arq-dashboard = "arq_dashboard.cli:main"

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arq_dashboard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"arq_dashboard/api/endpoints/*.py" = ["B008"]
